new' git push --all

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <video id="remoteVideo" autoplay playsinline muted></video>
-    <canvas id="canvas"></canvas>
+    <div id="cursor"></div>
+    <div id="canvasContainer">
+        <canvas id="canvas"></canvas>
+      </div>
 </body>
 <script src="js/hands.js"></script> <!-- Assuming your JavaScript code is in hands.js -->
 
